# cpp_media_manager

./: CMakeLists.txt  main.cpp
components/: CollectionListComponent.cpp  CollectionListComponent.h  ImageComponent.cpp  ImageComponent.h
utylity/: Collection.cpp  Collection.h  CollectionItem.cpp  CollectionItem.h
views/: ImageView.cpp  ImageView.h  MainView.cpp  MainView.h  SettingsView.cpp  SettingsView.h  ShowView.cpp  ShowView.h
